<resources>
    <string name="app_name">Altor</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Monitor Heart Beat Rate!</string>
    <string name="slide_1_desc">Know your heart beat rate reading from your wrist band device!</string>
    <string name="slide_2_title">Stay Safe</string>
    <string name="slide_2_desc">Worry less about your health condition. Get instant update on your health status!</string>
    <string name="slide_3_title">Drink Responsibly</string>
    <string name="slide_3_desc">Never getting drunk. Get alert when you are getting drunk!</string>
    <string name="slide_4_title">Check Alcohol Level</string>
    <string name="slide_4_desc">You can check your alcohol level anytime!</string>
    <string name="title_activity_main">ALTOR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="firstlaunch">ISFIRSTTIMELAUNCH</string>
    <string name="title_activity_login">Login</string>
    <string name="login_file">ALTOR_APPTHEME_LOGIN_FILE</string>
    <string name="username">ALTOR_USERNAME</string>
    <string name="age">ALTOR_AGE</string>
    <string name="weight">ALTOR_WEIGHT</string>
    <string name="title_activity_registration">Registration</string>
    <string name="sex">SEX</string>
    <string-array name="maritalStatus">
        <item>Select...</item>
        <item>Single</item>
        <item>Married</item>
        <item>Divorce</item>
        <item>Widow</item>
    </string-array>
    <string name="about">User is alerted about their Intoxication Levels on the Mi-band and via the mobile app

User can connect the device with a group of friends; who are alerted when a member of the group has exceeded their recommended Intoxication Levels.</string>
    <string name="title_activity_list_of_drinks">Drinks</string>
    <string name="dbName">altorDB</string>
    <string name="title_activity_test">Test</string>
    <string-array name="category">
        <item>Alcopops</item>
        <item>Beer</item>
        <item>Champagne</item>
        <item>Cider</item>

    </string-array>
    <string-array name="Alcopops">
        <item> Archers Aqua - 5 - 275ml@2.5,70cl@2.5,Standard(750ml)bottle@4.0,1Litre@4.0</item>
        <item>Average ABV - 4 - 275ml@2.5</item>
        <item>Bacardi Breezer - 4 - 275ml@2.5,70cl@2.5,Standard(750ml)bottle@4.0,1Litre@5.0</item>
        <item>Bailey\'s Glide - 4 - 275ml@2.5,70cl@2.5,Standard(750ml)bottle@3.0,1Litre@4.0</item>
        <item>Bliss - 5.5 - 275ml@2.5,70cl@2.5,Standard(750ml)bottle@3.0,1Litre@4.0</item>
        <item>Chekov Ice - 4 - 275ml@2.5,70cl@2.5,Standard(750ml)bottle@3.0,1Litre@4.0</item>
        <item>Crabbies Ginger Beer - 4 - 330ml@2.5,500ml@4.0</item>
        <item>Red Square - 5.1 - 275ml@2.5,70cl@2.5,Standard(750ml)bottle@4.0,1Litre@4.5</item>
        <item>Reef - 5 - 275ml@2.5,70cl@4.0,Standard(750ml)bottle@4.5,1Litre@5.0</item>
        <item>Smirnoff Ice - 4 - 275ml@2.5,70cl@2.5,Standard(750ml)bottle@3.0,1Litre@4.0</item>
        <item>VK Vodka Kick - 4 - 275ml@2.5,70cl@4.0,Standard(750ml)bottle@4.5,1Litre@4.5</item>
        <item>Vodka Mudshake - 4 - 275ml@2.0,70cl@2.5,Standard(750ml)bottle@3.0,1Litre@4.0</item>
        <item>WKD - 4 - 275ml@2.0,70cl@4.0</item>
    </string-array>
    <string-array name="Beer">
        <item>Ale/Stout</item>
        <item>Larger</item>
    </string-array>
    <string-array name="Ale_Stout">
        <item>1845 - 6.3 - Half Pint@1.5,440ml@0.0,500ml@3.0,Pint@3.0</item>
        <item>1892 - 3.3 - Half Pint@1.5,330ml@2.5,440ml@0.0,500ml@3.0,Pint@3.0</item>
        <item>Ansells Bitter - 3.4 - 275ml@1.8,Half Pint@1.5,330ml@2.0ml,440ml@2.2,500ml@3.0,Pint@3.0,660ml double size beer bottle@3.5</item>
        <item>Ansells Mid - 3.2 - 275ml@1.8,Half Pint@1.5,330ml@2.0ml,440ml@2.20,500ml@3.0,Pint@3.0,660ml double size beer bottle@3.5</item>
        <item>Badger First Gold - 4 - 275ml@1.8,Half Pint@1.5,330ml@2.0ml,440ml@2.8,500ml@3.0,Pint@3.0</item>
        <item>Banks\' Barley Gold - 9.1 - 275ml@2.0,Half Pint@1.5,330ml@2.0ml,440ml@2.8,500ml@3.0,Pint@3.0</item>
        <item>Bass Ale Draught - 4.4 - Half Pint@1.5,Pint@3.0</item>f
        <item>Beer ABV - 4 - Pint@3.0</item>
        <item>Bengal Lancer (IPA) - 5 - 275ml@2.0,Half Pint@1.5,330ml@2.0,440ml@2.5,500ml@3.0,Pint@3.0</item>
        <item>Bishops Finger (Bottle) - 5.4 - 275ml@2.0,330ml@2.5ml,440ml@2.2,500ml@3.2,660ml double size beer bottle@4.0</item>
        <item>Bishops Finger (cask) - 5 - Half Pint@1.5,Pint@3.0</item>
        <item>Black Cab - 4.2 - 275ml@2.0+,330ml@2.5ml,440ml@2.8,500ml@3.2</item>
        <item>Blandford Flyer - 5.2 - Half Pint@1.5,330ml@2.0ml,440ml@2.2,500ml@3.0,Pint@3.0</item>
        <item>Boddingtons - 4.1 - Half Pint@1.5,440ml@2.2,Pint@3.0</item>
        <item>Brakspear Bitter - 3.4 - Half Pint@1.5,330ml@2.0ml,500ml@3.0,Pint@3.0</item>
        <item>Burton Ale - 4.7 - 275ml@1.8,Half Pint@1.5,330ml@2.0ml,440ml@2.2,500ml@3.0,Pint@3.0,660ml double size beer bottle@3.5</item>
        <item>Caffrey\'s - 4 - Half Pint@1.5,440ml@2.2,Pint@3.0</item>
        <item>Chiswick Bitter - 3.5 - day@2.5,275ml@1.8,Half Pint@1.5,330ml@2.0ml,440ml@2.2,500ml@3.0</item>
    </string-array>
    <string-array name="Larger">
        <item>Amstel - 4.1 - 275ml@1.8,Half Pint@1.5,330ml@2.0ml,440ml@2.2,500ml@3.0,Pint@3.0</item>
        <item>Average - 5 - small bottle@1.8</item>
        <item>Baltika No 7 - 5.5 - Half Pint@1.5,330ml@2.0ml,440ml@2.2,500ml@3.0,Pint@3.0,660ml double size beer bottle@3.5</item>
        <item>Bavaria - 0 - 330ml@2.0ml,440ml@2.2,500ml@3.0</item>
        <item>Beck\'s - 4.8 - 275ml@1.8,Half Pint@1.5,330ml@2.0ml,440ml@2.2,500ml@3.0,Pint@3.0,660ml double size beer bottle@3.0</item>
        <item>Beck\'s Blue - 0 - 275ml@1.8,Half Pint@1.5,330ml@2.0ml,440ml@2.2,500ml@3.0,Pint@3.0</item>
        <item>Beck\'s Vier - 4 - Half Pint@1.5,330ml@2.0ml,440ml@2.2,500ml@3.0,Pint@3.0</item>
        <item>Bee17 - 4.7 - 275ml@1.8,Half Pint@1.5,330ml@2.0ml,440ml@2.2,500ml@3.0,Pint@3.0,660ml double size beer bottle@3.5</item>
        <item>Birra Moretti - 4.6 - 275ml@1.8,Half Pint@1.5,330ml@2.0ml,440ml@2.2,500ml@3.0,Pint@3.0,660ml double size beer bottle@3.5</item>
        <item>Blue Moon - 5.4 - Half Pint@1.5,330ml@2.0ml,440ml@2.2,500ml@3.0,Pint@3.0</item>
        <item>Brahma - 4.8 - 275ml@1.8,Half Pint@1.5,330ml@2.0ml,440ml@2.2,500ml@3.0,Pint@3.0,660ml double size beer bottle@3.5,2Litre@5.0</item>
        <item>Brains 45 - 4.5 - Half Pint@1.5,330ml@2.0ml,440ml@2.2,500ml@3.0,Pint@3.0</item>
        <item>Bud 66 - 4 - Half Pint@1.5,330ml@2.0ml,440ml@2.2,500ml@3.0,Pint@3.0</item>
        <item>Budweiser (bottle) - 4.8 - 275ml@1.8,Half Pint@1.5,330ml@2.0ml,440ml@2.2,500ml@3.0,Pint@3.0,660ml double size beer bottle@3.5</item>
        <item>Budweiser draught - 4.3 - Half Pint@1.5,Pint@3.0</item>
        <item>C2 - 2 - Half Pint@1.5,330ml@2.0ml,440ml@2.2,500ml@3.0,Pint@3.0,70cl@2.5</item>
        <item>Carling - 4 - Half Pint@1.5,440ml@2.2,500ml@3.0,Pint@3.0</item>
        <item>Carling Coolers Lemon/Orange - 2 -  275ml@1.8,Half Pint@1.5,330ml@2.0ml,440ml@2.2,500ml@3.0,Pint@3.0,660ml double size beer bottle@3.5</item>
        <item>Carling Zest Citrus - 2.8 - 275ml@1.8,Half Pint@1.5,330ml@2.0ml,440ml@2.2,500ml@3.0,Pint@3.0,660ml double size beer bottle@3.5</item>
        <item>Carling Ginger - 2.8 - 275ml@1.8,Half Pint@1.5,330ml@2.0ml,440ml@2.2,500ml@3.0,Pint@3.0,660ml double size beer bottle@3.5</item>
    </string-array>
    <string name="title"> The amount of alcohol and how you drink it affects the level of risk to your health</string>
    <string name="lowrisk">Low Risk</string>
    <string name="lowrisktext">If you are typically drinking within the low risk unit guidelines, the risks
    to yout health will be low. No level of drinking is considered risk-free, so the advice is always to consider individual circumstances

    Low risk level are
    Men who do not drink more than 14units per week
    Women who do not drink more than 11.5units per week</string>
    <string name="increasingrisk">Increasing Risk</string>
    <string name="increasingrisktext">If you are regularly exceeding the low risk guidelines, your risk of short and long term harm
    to your health increases/ Alcohol related illness includes liver and heart disease, various cancers and stroke.

    Increasing risk drinkers include:
        Men who drink more between 15 - 49 units per week on a regular basis
     Women who drink more between 12 - 34 units per week on a regular basis
    </string>
    <string name="higherrisk">Higher Risk</string>
    <string name="higherrisktext">When drinking considerably above the low risk guidelines the risk to your health increases and your drinking will almost
    certainly harm your health. Compared to non-drinkers you are at a higher risk of developing serious illness and it may be time to take a
    serious look at how you can cut back

    Higher risk drinkers includes
    Men who drinks more than 50units per week on a regular basis
    Wwomen who drinks more than 35units per week on a regular basis</string>
</resources>